<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="15dp">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="220dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/login"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login"
        android:fontFamily="@font/source_code_pro"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_text_field_design"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:startIconDrawable="@drawable/person"
            app:startIconTint="@color/white"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:boxStrokeErrorColor="@color/white"
            app:errorIconTint="@color/white"
            app:errorTextColor="@color/white"
            app:boxStrokeWidth="3dp"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="20"
                android:fontFamily="@font/source_code_pro"
                android:maxLines="1"
                android:textStyle="bold"
                app:hintTextColor="@color/white"
                android:textColor="@color/white"

                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_password_field_design"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            app:startIconDrawable="@drawable/security"
            app:startIconTint="@color/white"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:boxStrokeErrorColor="@color/white"
            app:errorIconTint="@color/white"
            app:errorTextColor="@color/white"
            app:boxStrokeWidth="3dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textStyle="bold"
                android:fontFamily="@font/source_code_pro"
                app:hintTextColor="@color/black"
                android:textColor="@color/white"

                />


        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:backgroundTint="@color/transparent"
        android:text="@string/forgot_password"
        android:textColor="#B3FFAB"
        android:textSize="14sp"
        android:textStyle="bold"

        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/white"
        android:padding="10dp"
        android:text="@string/login"
        android:fontFamily="@font/source_code_pro"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/or"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"

        />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/source_code_pro"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/white"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBarLoginActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:layout_marginBottom="10dp"
        android:indeterminate="true" />
</LinearLayout>
