<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".SignupActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="148dp"
        android:layout_height="143dp"
        android:layout_gravity="center"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/signup" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_signup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:boxStrokeErrorColor="@color/white"
            app:errorIconTint="@color/white"
            app:errorTextColor="@color/white"
            android:textColorHint="@color/white"
            app:startIconDrawable="@drawable/person"
            app:startIconTint="@color/white"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="3dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textStyle="bold"
                android:fontFamily="@font/source_code_pro"
                android:textColor="@color/white"

                />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_signup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/phone_number"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:boxStrokeErrorColor="@color/white"
            app:errorIconTint="@color/white"
            app:errorTextColor="@color/white"
            app:startIconDrawable="@drawable/phone"
            app:startIconTint="@color/white"
            app:boxStrokeWidth="3dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:fontFamily="@font/source_code_pro"
                android:textStyle="bold"
                android:textColor="@color/white"

                />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_signup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/email"
            app:boxStrokeErrorColor="@color/white"
            app:errorIconTint="@color/white"
            app:errorTextColor="@color/white"
            app:startIconDrawable="@drawable/email"
            app:startIconTint="@color/white"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="3dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textStyle="bold"
                android:fontFamily="@font/source_code_pro"
                android:textColor="@color/white"

                />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_signup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            app:boxStrokeErrorColor="@color/white"
            app:errorIconTint="@color/white"
            app:errorTextColor="@color/white"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="3dp"
            app:startIconTint="@color/white"
            app:startIconDrawable="@drawable/security"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:fontFamily="@font/source_code_pro"
                android:textStyle="bold"
                android:textColor="@color/white"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPassword_signup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="3dp"
            app:startIconDrawable="@drawable/security"
            app:boxStrokeErrorColor="@color/white"
            app:errorIconTint="@color/white"
            app:errorTextColor="@color/white"
            app:startIconTint="@color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textStyle="bold"
                android:fontFamily="@font/source_code_pro"
                android:textColor="@color/white"

                />


        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        android:padding="10dp"
        android:text="@string/register"
        android:fontFamily="@font/source_code_pro"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/login_here"
            android:textColor="#B3FFAB"
            android:textSize="14sp"
            android:textStyle="bold" />


    </LinearLayout>
</LinearLayout>