<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".ForgetPasswordActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/passwordrecovery" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/source_code_pro"
        android:text="@string/password_recovery"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginTop="50dp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ResetUserEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        app:startIconDrawable="@drawable/email"
        app:startIconTint="@color/white"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        app:errorTextColor="@color/white"
        app:errorIconTint="@color/white"
        app:boxStrokeErrorColor="@color/white"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="3dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:fontFamily="@font/source_code_pro"
            android:textStyle="bold"
            app:hintTextColor="@color/black" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sendEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/source_code_pro"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:padding="10dp"
        android:text="@string/send_email"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />



</LinearLayout>