<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".EditProfile">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/profile_username_bg"
            android:padding="20dp">

            <ImageView
                android:id="@+id/profileImg"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/userr" />

            <TextView
                android:id="@+id/username_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profileImg"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/mochiy_p"
                android:includeFontPadding="false"
                android:text="Username"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp"
            android:paddingTop="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profileUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="20dp"
                android:clickable="false"
                android:hint="@string/username"
                android:textColorHint="@color/white"
                android:tooltipText="@string/username"
                app:boxBackgroundColor="@color/black"
                app:boxStrokeWidth="3dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/person_profile"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/white"
                    android:enabled="false"
                    android:fontFamily="@font/source_code_pro"
                    android:inputType="text"
                    android:text="sameed2001"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textStyle="bold" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profileUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/email"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="@color/black"
                app:boxStrokeWidth="3dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/email"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/source_code_pro"
                    android:inputType="textEmailAddress"
                    android:text="sameedahmed.sa.sa@gmail.com"
                    android:textColor="@color/white" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profileUserPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/phone_number"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="@color/black"
                app:boxStrokeWidth="3dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/phone"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/source_code_pro"
                    android:inputType="number"
                    android:text="03224316057"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnEditDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="25dp"
                android:backgroundTint="@color/colorAccent"
                android:elevation="10dp"
                android:fontFamily="@font/mochiy_p"
                android:padding="15dp"
                android:text="Update Details"
                android:textColor="@color/white"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>


</ScrollView>